--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -1,4 +1,4 @@
-<style type="text/css">
+<style>
     /* don't remove. */
     .about-cover {
         height: 75vh;
@@ -8,7 +8,6 @@
 <%- partial('_partial/bg-cover') %>
 
 <main class="content">
-
     <div id="aboutme" class="container about-container">
         <div class="card">
             <div class="card-content">
@@ -60,7 +59,6 @@
                 <% if (theme.artitalk && theme.artitalk.enable) { %>
                 <%- partial('_widget/artitalk') %>
                 <% } %>
-                
             </div>
         </div>
     </div>
