--- a/layout/_partial/gitment.ejs
+++ b/layout/_partial/gitment.ejs
@@ -9,17 +9,18 @@
     <div id="gitment-content" class="card-content"></div>
 </div>
 
-<script src="<%- theme.jsDelivr.url %><%- url_for('/libs/gitment/gitment.js') %>"></script>
 <script>
-var gitment = new Gitment({
-    id: '<%= page.date %>',
-    owner: '<%= theme.gitment.owner %>',
-    repo: '<%= theme.gitment.repo %>',
-    oauth: {
-        client_id: '<%= theme.gitment.oauth.clientId %>',
-        client_secret: '<%= theme.gitment.oauth.clientSecret %>'
-    }
-});
+    $.getScript("<%- theme.jsDelivr.url %><%- url_for('/libs/gitment/gitment.js') %>",function () {
+        var gitment = new Gitment({
+            id: '<%= page.date %>',
+            owner: '<%= theme.gitment.owner %>',
+            repo: '<%= theme.gitment.repo %>',
+            oauth: {
+                client_id: '<%= theme.gitment.oauth.clientId %>',
+                client_secret: '<%= theme.gitment.oauth.clientSecret %>'
+            }
+        });
 
-gitment.render('gitment-content');
+        gitment.render('gitment-content');
+    })
 </script>
