--- a/layout/_widget/artitalk.ejs
+++ b/layout/_widget/artitalk.ejs
@@ -1,8 +1,9 @@
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/artitalk"></script>
 <div id="artitalk_main"></div>
 <script>
-    new Artitalk({
-        appId: '<%- theme.artitalk.appId %>',
-        appKey: '<%- theme.artitalk.appKey %>',
+    $.getScript("//cdn.jsdelivr.net/npm/artitalk",function (){
+        new Artitalk({
+            appId: '<%- theme.artitalk.appId %>',
+            appKey: '<%- theme.artitalk.appKey %>',
+        })
     })
 </script>
